--- a/src/template.html
+++ b/src/template.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant Page | DaveTheDev</title>
+    <title>The Burger Lab | DaveTheDev</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <button id="home">Home</button>
+            <button id="menu">Menu</button>
+            <button id="about">About Us</button>
+        </nav>
+    </header>
+
+    <div id="content">
+    </div>
+
+
 </body>
+
 </html>
